# zenzic

./: .bumpversion.toml  .gitignore  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .zenzic-score.json  .zenzic.local.toml.back  .zenzic.local.toml.example  .zenzic.toml  CHANGELOG.archive.md  CHANGELOG.it.archive.md  CHANGELOG.it.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.it.md  CONTRIBUTING.md  INTERNAL_GLOSSARY.toml  MIGRATION-MONOREPO.md  NOTICE  README.it.md  README.md  RELEASE.it.md  RELEASE.md  REUSE.toml  ROADMAP.md  SECURITY.md  ZENZIC_BRAIN.md  coverage.json  justfile  mkdocs.yml  mutmut_pytest.ini  noxfile.py  pyproject.toml  tailwind-input.css  tailwind.config.js  zenzic-output.schema.json  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  custom_rule_proposal.yml  docs_issue.yml  feature_request.yml  gate-bypass-postmortem.md  good_first_issue.yml  security_vulnerability.yml
.github/agents/: namespace-suture.agent.md
.github/workflows/: ci-actions.yml  ci-vscode.yml  ci.yml  codeql.yml  compliance.yml  dependency-review.yml  deploy-docs.yml  release-actions.yml  release-docs.yml  release-vscode.yml  release.yml  sbom.yml  secret-scan.yml  security-posture.yml  zenzic.yml
actions/: .bumpversion.toml  CHANGELOG.md  README.md  action.yml  justfile  pyproject.toml
actions/.github/: PULL_REQUEST_TEMPLATE.md
actions/scripts/: pin_core.py
changelogs/: README.md  v0.1.md  v0.10-docs-archive.md  v0.10.md  v0.11-docs-archive.md  v0.11.md  v0.12-docs-archive.md  v0.12.md  v0.13-docs-archive.md  v0.13.md  v0.14-docs-archive.md  v0.14.md  v0.15-docs-archive.md  v0.15.x.md  v0.16.x.md  v0.17.x.md  v0.18.x.md  v0.19.x.md  v0.2.md  v0.20.x.md  v0.21.x.md  v0.22.x.md  v0.23.x.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7-docs-archive.md  v0.7.md  v0.8-docs-archive.md  v0.8.md  v0.9-docs-archive.md  v0.9.md
cloudflare_worker/: test.js  worker.js
core/: .bumpversion.toml  CHANGELOG.md  pyproject.toml
core/tests/: test_blue_i18n_edge.py  test_cache.py  test_chaos_i18n.py  test_cli_help_snapshot.py  test_codes.py  test_config.py  test_coverage_boost.py  test_credentials_obfuscation.py  test_dual_mode.py  test_exclusion.py  test_gallery_phase2bc.py  test_incremental_engine.py  test_integrity_zensical.py  test_json_integrity.py  test_lsp.py  test_mkdocs_sync.py  test_nav_contract.py  test_parallel.py  test_parser.py  test_protocol_evolution.py  test_redteam_remediation.py  test_references.py  test_resolver.py  test_rules.py  test_schema_validation.py  test_scorer.py  test_security_pipeline.py  test_target_resolver.py  test_tower_of_babel.py
docs/: _redirects  architecture.md  checks.md  ci-cd.md  index.md  robots.txt
docs/about/: brand-kit.md  index.md  license.md  philosophy.md
docs/adr/: 003-discovery-logic.md
docs/arch/: vsm_engine.md
docs/architecture/: lsp-integration.md
docs/assets/: pdf_cover.html.j2
docs/blog/: .authors.yml  index.md  rss.xsl
docs/community/: faqs.md  index.md
docs/configuration/: adapters-config.md  core-settings.md  custom-rules-dsl.md  index.md
docs/developers/: examples.md  index.md  plugins.md  writing-an-adapter.md
docs/docs/: index.md
docs/editor/: vscode.md
docs/explanation/: architecture.md  brand-philosophy.md  community-index.md  configuration-loading.md  core-mechanics.md  discovery.md  engine-migration-design.md  exclusion-design.md  github-action-internals.md  language-server-architecture.md  mineral-path.md  privacy-gate.md  scoring-design.md  scoring-system.md  structural-integrity.md  the-zenzic-trinity.md  why-zenzic.md
docs/getting-started/: quickstart.md
docs/guide/: engines.md  index.md  migration.md
docs/guides/: engines.md  migration.md
docs/how-to/: add-badges.md  add-custom-rules.md  configuration-strategy.md  configure-adapter.md  configure-ci-cd.md  configure-privacy-gate.md  configure-social-metadata.md  handle-technical-debt.md  initialize-configuration.md  install.md  manage-cross-site-links.md  migrate-engines.md  use-brand-system.md  workflow-integration.md
docs/internal/: arch_gaps.md  architecture.md  sentinel-style-guide.md
docs/it/: architecture.md  checks.md  ci-cd.md  index.md
docs/reference/: advanced-features.md  api-json.md  api.md  brand-kit.md  brand-system.md  checks.md  cli.md  configuration-reference.md  engines.md  finding-codes.md  glossary.md  index.md  scoring-algorithm.md  suppression-policy.md  zenzic-action.md
examples/: run_demo.sh  safety_demonstration.md
examples/plugin-scaffold-demo/: README.it.md  README.md  pyproject.toml  zenzic.toml
examples/plugin-scaffold-demo/docs/: index.md
examples/plugin-scaffold-demo/src/plugin_scaffold_demo/: __init__.py  rules.py
examples/plugin-scaffold-demo/tests/: test_rules.py
overrides/: home.html  main.html
scripts/: benchmark.py  build-assets.js  compile_redirects.py  generate_docs_assets.py  generate_hero_specimen.py  generate_screenshot.py  generate_social.py  map_project.py  pre-commit-zenzic.sh
tests/: _helpers.py  conftest.py  repro_Z104_cross_plugin.py  test_assets.py  test_blue_i18n_edge.py  test_blue_vsm_edge.py  test_brain.py  test_cache.py  test_chaos_i18n.py  test_cli.py  test_cli_e2e.py  test_cli_help_snapshot.py  test_cli_visual.py  test_codes.py  test_config.py  test_coverage_boost.py  test_credentials_obfuscation.py  test_custom_rules.py  test_docusaurus_adapter.py  test_docusaurus_blog_vsm.py  test_docusaurus_proptest.py  test_dual_mode.py  test_exclusion.py  test_explain_genealogy.py  test_fix.py  test_gallery_phase2bc.py  test_guard.py  test_guardian_docusaurus.py  test_guardian_zensical.py  test_i18n_parity.py  test_inspect_routes.py  test_integration_finale.py  test_integrity_docusaurus.py  test_integrity_zensical.py  test_json_integrity.py  test_lsp.py  test_lsp_incremental.py  test_mkdocs_sync.py  test_nav_contract.py  test_parallel.py  (+23 more)
vscode/: .bumpversion.toml  CHANGELOG.md  README.md  ROADMAP.md
(+695 files in other folders)
