# SPDX-FileCopyrightText: 2026 PythonWoods <dev@pythonwoods.dev>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenzic"
version = "0.7.0"
description = "Engineering-grade, engine-agnostic linter and security shield for Markdown documentation"
readme = "README.md"
requires-python = ">=3.11"
# PEP 639: SPDX expression string (replaces deprecated `license = { text = "..." }`)
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSES/*.txt"]
authors = [{ name = "PythonWoods", email = "dev@pythonwoods.dev" }]
keywords = ["documentation", "mkdocs", "zensical", "linter", "ci", "strict", "links", "security", "yaml", "json", "toml"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=15.0.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.0.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
zenzic = "zenzic.main:cli_main"

[project.entry-points."zenzic.adapters"]
docusaurus = "zenzic.core.adapters:DocusaurusAdapter"
mkdocs     = "zenzic.core.adapters:MkDocsAdapter"
zensical   = "zenzic.core.adapters:ZensicalAdapter"
standalone = "zenzic.core.adapters:StandaloneAdapter"

[project.entry-points."zenzic.rules"]
broken-links = "zenzic.core.rules:VSMBrokenLinkRule"

[project.urls]
Homepage      = "https://zenzic.dev"
Documentation = "https://zenzic.dev/docs/"
Repository    = "https://github.com/PythonWoods/zenzic"
Changelog     = "https://github.com/PythonWoods/zenzic/blob/main/CHANGELOG.md"
Issues        = "https://github.com/PythonWoods/zenzic/issues"

# ─── Build ────────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/zenzic"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "zenzic/examples"

# ─── Development dependencies (PEP 735 — managed by uv) ──────────────────────

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "mutmut>=3.0.0",
]
lint = [
    "ruff>=0.3.0",
    "mypy>=1.5.0",
    "pre-commit>=4.5.1",
    "reuse>=5.0.2",
    "types-pyyaml>=6.0.12.20250915",
]
release = [
    "nox>=2024.4.15",
    "bump-my-version>=1.2.6",
    "pip-audit>=2.10.0",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "release"},
]

# ─── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "A"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["zenzic"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ─── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --strict-config --import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["tests"]
markers = [
    "slow: marks slow tests (deselect with -m 'not slow')",
    "integration: marks tests that require external services or processes",
]

# ─── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]
# relative_files ensures that coverage paths from editable installs match
# the src/ tree, which is required for mutmut v3's source→test mapping.
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

# ─── Mutation testing (Sentinel Rigor) ────────────────────────────────────────

[tool.mutmut]
paths_to_mutate = [
    "src/zenzic/core/rules.py",
    "src/zenzic/core/shield.py",
    "src/zenzic/core/reporter.py",
]
# pytest_add_cli_args_test_selection specifies which tests to run (replaces tests_dir).
pytest_add_cli_args_test_selection = ["tests/"]
also_copy = ["src/"]
# Override importlib mode: mutmut v3's import-graph analyser requires classic
# prepend mode to trace source→test links (our addopts sets importlib mode).
pytest_add_cli_args = ["--import-mode=prepend"]

# ─── Version bumping ───────────────────────────────────────────────────────────

[tool.bumpversion]
current_version = "0.7.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "release: bump version {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<pre_l>a|b|rc)(?P<pre_n>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.pre_l]
values = ["a", "b", "rc", "final"]
optional_value = "final"

[tool.bumpversion.parts.pre_n]
first_value = 1

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/zenzic/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}"
replace = "date-released: {now:%Y-%m-%d}"
regex = true

[[tool.bumpversion.files]]
# CHANGELOG uses PEP 440 normalized form: 0.5.0-a2 (hyphen before pre-release label).
# The serialize pattern below produces that form; pyproject uses 0.5.0a2 (no hyphen).
filename = "CHANGELOG.md"
# Cerca solo l'header di secondo livello — evita match su sezioni storiche e link di riferimento
search = "## [{current_version}]"
replace = "## [{new_version}]"
serialize = ["{major}.{minor}.{patch}{pre_l}{pre_n}", "{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "CHANGELOG.it.md"
# Cerca solo l'header di secondo livello — evita match su sezioni storiche e link di riferimento
search = "## [{current_version}]"
replace = "## [{new_version}]"
serialize = ["{major}.{minor}.{patch}{pre_l}{pre_n}", "{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "README.md"
search = "v{current_version}"
replace = "v{new_version}"
serialize = ["{major}.{minor}.{patch}{pre_l}{pre_n}", "{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "README.it.md"
search = "v{current_version}"
replace = "v{new_version}"
serialize = ["{major}.{minor}.{patch}{pre_l}{pre_n}", "{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "CONTRIBUTING.md"
search = "v{current_version}"
replace = "v{new_version}"
serialize = ["{major}.{minor}.{patch}{pre_l}{pre_n}", "{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "RELEASE.md"
search = "v{current_version}"
replace = "v{new_version}"

[[tool.bumpversion.files]]
filename = ".github/ISSUE_TEMPLATE/security_vulnerability.yml"
search = '"{current_version}"'
replace = '"{new_version}"'
