# SPDX-FileCopyrightText: 2026 PythonWoods <dev@pythonwoods.dev>
# SPDX-License-Identifier: Apache-2.0

# ─── Zenzic Determinism Invariant ──────────────────────────────────────
# Zenzic ships zero AI/ML inference dependencies. Pure Python + AST + regex.
# Adversarial AI testing happens externally; no runtime LLM call exists in
# any code path. Reintroducing such a dependency violates the purity contract.
# ───────────────────────────────────────────────────────────────────────

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenzic"
version = "0.19.2"
description = "Engineering-grade, engine-agnostic static analyzer and credential scanner for Markdown documentation"
readme = "README.md"
requires-python = ">=3.10"
# PEP 639: SPDX expression string (replaces deprecated `license = { text = "..." }`)
license = "Apache-2.0"
keywords = ["static-analysis", "security", "documentation", "semver", "linter", "ci", "strict", "links", "mkdocs", "zensical", "yaml", "json", "toml"]
classifiers = [

 # ─── Version bumping ───────────────────────────────────────────────────────────

    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=15.0.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.0.0",
    "httpx>=0.27,<1.0",
    # ZRT-007: DFA-native RE2 engine — no NFA fallback, no ReDoS surface.
    # ImportError at module load time is intentional: non-RE2 environments
    # are explicitly unsupported. google-re2 provides the C++ RE2 bindings.
    "google-re2>=1.0",
    # tomllib was added to the stdlib in Python 3.11 (PEP 680).
    # tomli is the identical backport for Python 3.10 (our Floor).
    "tomli>=2.0.0; python_version < '3.11'",
    "pathspec>=1.1.1",
]

[project.scripts]
zenzic = "zenzic.main:cli_main"

[project.entry-points."zenzic.adapters"]
mkdocs     = "zenzic.core.adapters:MkDocsAdapter"
zensical   = "zenzic.core.adapters:ZensicalAdapter"
standalone = "zenzic.core.adapters:StandaloneAdapter"

[project.entry-points."zenzic.rules"]
broken-links = "zenzic.core.rules:VSMBrokenLinkRule"

[project.urls]
Homepage      = "https://zenzic.dev"
Documentation = "https://zenzic.dev/docs/"
Repository    = "https://github.com/PythonWoods/zenzic"
Source        = "https://github.com/PythonWoods/zenzic"
Changelog     = "https://github.com/PythonWoods/zenzic/blob/main/CHANGELOG.md"
Issues        = "https://github.com/PythonWoods/zenzic/issues"
Tracker       = "https://github.com/PythonWoods/zenzic/issues"

# ─── Optional extras (PEP 508 — pip / pipx compat) ───────────────────────────
# Use:  uv pip install -e ".[dev]"   (activates Identity Gate, CEO-246/268)
# Note: uv-native dependency groups (PEP 735) remain the primary source of
#       truth for local dev; this extra exists for pip/pipx/CI compatibility.

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-rss-plugin>=1.15.0"
]
dev = [
    "nox>=2024.10.11",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "reuse>=3.0.0",
    "types-toml",
]

# ─── Build ────────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/zenzic"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "zenzic/examples"

# ─── Development dependencies (PEP 735 — managed by uv) ──────────────────────

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.3.0",
    "hypothesis>=6.100.0",
    "jsonschema>=4.26.0",
    "mutmut>=3.5.0",
]
lint = [
    "ruff>=0.3.0",
    "mypy>=1.5.0",
    "pre-commit>=4.5.1",
    "reuse>=5.0.2",
    "types-pyyaml>=6.0.12.20260518",
]
release = [
    "nox>=2024.4.15",
    "bump-my-version>=1.2.6",
    "pip-audit>=2.10.0",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "release"},
]

# ─── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "A", "TID252"]
ignore = ["E501", "B008"]

# Ban standard re module in governed paths (src/ + tests/)
[tool.ruff.lint.flake8-tidy-imports.banned-api]
re = { msg = "Use `re2` (google-re2) instead to prevent ReDoS vulnerability (ZRT-007)." }

[tool.ruff.lint.isort]
known-first-party = ["zenzic"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = false

# ─── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --strict-config --import-mode=importlib --timeout=120"
testpaths = ["tests"]
pythonpath = ["tests"]
markers = [
    "slow: marks slow tests (deselect with -m 'not slow')",
    "integration: marks tests that require external services or processes",
]

# ─── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]
# relative_files ensures that coverage paths from editable installs match
# the src/ tree, which is required for mutmut v3's source→test mapping.
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

# ─── Mutation testing (Mutation Gate) ────────────────────────────────────────

[tool.mutmut]
paths_to_mutate = [
    "src/zenzic/core/rules.py",
    "src/zenzic/core/credentials.py",
    "src/zenzic/core/reporter.py",
]
# pytest_add_cli_args_test_selection specifies which tests to run (replaces tests_dir).
pytest_add_cli_args_test_selection = ["tests/"]
also_copy = ["src/"]
# Override importlib mode: mutmut v3's import-graph analyser requires classic
# prepend mode to trace source→test links (our addopts sets importlib mode).
pytest_add_cli_args = ["--import-mode=prepend"]

# ─── Version bumping ───────────────────────────────────────────────────────────
# CONSOLIDATED IN .bumpversion.toml (primary source of truth for bump-my-version).
# This section removed to prevent governance duplication across version sources.
# All version bump config now maintained in single .bumpversion.toml file.
# ────────────────────────────────────────────────────────────────────────────────

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "tests.integrity.*"
]
disallow_untyped_defs = false
check_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
