# SPDX-FileCopyrightText: 2026 PythonWoods <dev@pythonwoods.dev>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenzic"
version = "0.23.1"
description = "Deterministic Document Integrity Engine and SAST for Markdown/MDX graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=15.0.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.0.0",
    "httpx>=0.27,<1.0",
    "google-re2>=1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pathspec>=1.1.1",
]

[project.scripts]
zenzic = "zenzic.main:cli_main"

[project.entry-points."zenzic.adapters"]
mkdocs     = "zenzic.core.adapters:MkDocsAdapter"
zensical   = "zenzic.core.adapters:ZensicalAdapter"
standalone = "zenzic.core.adapters:StandaloneAdapter"

[project.entry-points."zenzic.rules"]
broken-links = "zenzic.core.rules:VSMBrokenLinkRule"

[tool.hatch.build.targets.wheel]
packages = ["core/src/zenzic"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "zenzic/examples"
