# SPDX-FileCopyrightText: 2026 PythonWoods <dev@pythonwoods.dev>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plugin-scaffold-demo"
version = "0.1.0"
description = "Custom Zenzic plugin rule package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["zenzic>=0.5.0a2"]

[project.entry-points."zenzic.rules"]
plugin-scaffold-demo = "plugin_scaffold_demo.rules:PluginScaffoldDemoRule"

[tool.hatch.build.targets.wheel]
packages = ["src/plugin_scaffold_demo"]
